Added president image to Nosotros

--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -78,6 +78,10 @@
                 <img src="assets/nosotros.jpg">
                 De izquierda a derecha, <strong>arriba</strong> - Presidentes Leonel Lara (Valle de Sula), Enos Valladares (Satelite), Ángel Cruz (La Lima), Bernardo Hernández (Fesitranh), Rene Zelaya (La Ceiba), Marco Baquedano (El Progreso), Carlos Flores (Villanueva), Jared R. Ocampo (Setenta), Geovany Arita (Santa Rosa), <strong>abajo</strong> – Miguel Sing (Merendón), Ronald Veirs (Misión SPS), Héctor Manley (San Pedro Sula), Rodolfo Doblado (Olanchito)
             </p>
+            <p style="text-align: justify">
+                <img src="assets/nosotros2.jpeg">
+                De izquierda a derecha, <strong>de pie</strong> – Presidentes Carlos Flores (Villanueva), Marco Baquedano (El Progreso), Oscar Orellana (Santa Rosa), Hector Manley (San Pedro Sula), Ángel Cruz (La Lima), Bernardo Hernández (Fesitranh), Marvin Palomo (Satélite), Miguel Sing (Merendón), José Hernández (Choloma), <strong>sentados</strong> – Rene Zelaya (La Ceiba), Norman Klein (Misión SPS Este), Jared R. Ocampo (Setenta), James Dester (SPS Oeste), Maynor Reyes (Valle de Sula)
+            </p>
 
             <h4>Contáctenos</h4>
             <p><b>Si quiere contactarnos puede hacerlo</b> visítanos en <a href="/contact_us" target="_blank">aquí</a></p>
