--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -53,7 +53,7 @@
                                 </li>
 
                               <li class="dropdown">
-                                <a class="dropdown-toggle" data-hover="dropdown" data-toggle="" href="admin"><i class="icon-signin"></i><br />Administrar<b class="caret"></b></a>
+                                <a class="dropdown-toggle" data-hover="dropdown" data-toggle="" href="/admin"><i class="icon-signin"></i><br />Administrar<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                   <% if current_user.nil? %>
                                       <li><%= link_to 'Login', signin_path,:tabindex=>"-1" %></li>
